# rustiland

./: .gitignore  README.md
.github/workflows/: rust.yml
application_rustigy/: Cargo.toml  README.md
application_rustigy/src/: main  main.rs
berryring/: Cargo.toml
berryring/templates/: circle_data.html  home_automation_dashboard.html  overview.html
halloween_player/: Cargo.toml
halloween_player/src/: main.rs
halloween_player/templates/: index.html
hello_cargo/: Cargo.toml
hello_cargo/src/: main.rs
restor/: Cargo.toml
restor/logs/: restor.log.2025-07-13  restor.log.2025-07-14
restor/restor/: Cargo.toml
restor/src/: main.rs
restor/templates/: index.html
restor/templates/errors/: 404.html  405.html  500.html
rust_gpiozero_demo/: Cargo.toml
rust_gpiozero_demo/src/: main.rs
rustyvibes/: Cargo.toml
rustyvibes/src/: main.rs
server/public/: hello.html  index.html
server/src/: main.rs  server.rs  website_handler.rs
server/src/http/: method.rs  mod.rs  query_strings.rs  request.rs  response.rs
usbinfo/: Cargo.toml
usbinfo/src/: main.rs
