[package]
name = "rustyvibes"
version = "0.1.0"
edition = "2024"

[dependencies]
esp-idf-svc = { version = "0.48", default-features = false }
esp-idf-hal = "0.44"
esp-idf-sys = { version = "0.34", features = ["binstart"] }
embedded-svc = "0.27"
anyhow = "1.0"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
embuild = "0.31"

[[bin]]
name = "rustyvibes"
harness = false